--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,16 +27,15 @@
         </form>
       </div>
       <div class="tasks flex gap-3 flex-wrap p-10">
-        <% if(files.length > 0 ){ %> <% files.forEach(function(val){ %>
+        <% if(files.length > 0 ){ %> 
+          <% files.forEach(function(val){ %>
         <div class="task min-w-72 px-3 py-4 rounded-md bg-zinc-800">
-          <h1 class="text-white text-3xl tracking-tighter">
-            <%= val %>
-          </h1>
+          <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
           <a class="text-blue-500 inline-block mt-3" href="">Read more.</a>
+        </div>
           <% }) %> <% } else { %>
           <h3 class="text-zinc-600">No tasks yet.</h3>
           <% } %>
-        </div>
       </div>
     </div>
   </body>
