--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <div class="form p-10 text-white">
         <form action="/create" method="post">
           <input
-            class="block w-full rounded-md outline-none py-2 bg-zinc-800"
+            class="block w-full rounded-md outline-none px-5 py-2 bg-zinc-800"
             type="text"
             placeholder="Title goes here" name="title"
           />
@@ -31,7 +31,7 @@
           <% files.forEach(function(val){ %>
         <div class="task min-w-72 px-3 py-4 rounded-md bg-zinc-800">
           <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
-          <a class="text-blue-500 inline-block mt-3" href="">Read more.</a>
+          <a class="text-blue-500 inline-block mt-3" href="/Files/<%= val %>">Read more.</a>
         </div>
           <% }) %> <% } else { %>
           <h3 class="text-zinc-600">No tasks yet.</h3>
